@@ -16,6 +16,7 @@ Version 1.5.11+svn:
    * Fix broken auto-undo when trying several move+attack with the same unit
    * Changed the widgets in the in game message dialog
    * The multiplayer dialog shows tooltips again
+   * The textbox history now uses CTRL+TAB and CTRL+SHIFT+TAB
  * WML Engine:
    * Fix incorrect or doubled "sighted" events when delaying shroud update
    * Fix sometimes doubled "select" events
